styles/index.css
/* ======== RESET =========*/

html {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

* {
    margin: 0;
    padding: 0;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

img {
    width: 100%;
    border-radius: 5px;
}

/* ======== LAYOUT =========*/

body {
    background-color: var(--bgcolor);
}

.LearningRoads {
    width: 70%;
    display: flex;
    justify-content: space-around;
    margin: 30px auto;
}

button {
    padding: 20px;
    border-radius: 10px;
    border: none;
    background-color: var(--ligther-color);
    color: var(--contrast-color);
}

button:hover {
    background-color: var(--darker-color);
    color: var(--bgcolor);
}

.Center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.Header {
    background-color: var(--ligther-color);
    height: 80px;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.AlignThemes {
    width: 100%;
    display: flex;
    justify-content: space-around;
    position: absolute;
}

.LogoSpace {
    width: 100px;
    height: 100px;
}

.ThemesMenu {
    width: 100px;
    border-radius: 0 0 10px 10px;
    background-color: var(--ligther-color);
    flex-direction: column;
}

.ThemesMenu > button{
    padding: 10px;
    margin: 5px;
}

.ThemesMenu > h1{
    width: 80%;
    margin: 0 auto;
    font-size: small;
    text-align: center;
    color: var(--contrast-color);
    font-family: var(--poppins-font);
}

#ChangeThemeBTM {
    width: 50px;
    height: 50px;
    border-radius: 5px;
    background:url(../images/LuaIcone.png);
    background-size: cover;
}

#ChangeThemeBTM:hover{
    background:url(../images/LuaIconeHover.png);
    background-size: cover;
}

.Logo {
    width: 50px;
    height: 50px;
    border-radius: 5px;
}

.Content {
    flex-direction: column;
    width: 100%;
}

.Message  {
    margin-top: 3rem;
    flex-direction: column;
    width: 100%;
    color: var(--contrast-color);
}

.Title {
    padding: 10px;
    font-size: 65px;
    line-height: 4rem;
    font-family: var(--gill_sans-font);
    @media screen and (max-width: 790px) {
        font-size: 45px;
        line-height: normal;
     }
}

.Description {
    padding: 10px;
    font-family: var(--poppins-font);
}


/*FAZER UM BREAKPOINT, SE NÃO A APLICAÇÃO TODA QUEBRA
MUDAR A DIV PARA QUANDO A TELA FOR MENOR QUE 909PX
*/

.FooterImage {
    width: 550px;
    height: 500px;
    @media screen and (max-width: 1000px) {
       width: 100%;
       height: 400px;
    }
}
/*Estilos referentes ao Sobre o site(About WebSite)*/
.AboutWebsite{
    padding: 10px;
    margin-top: 150px;
    display: flex;
    align-items: center;
    @media screen and (max-width: 1000px) {
       flex-direction: column;
       margin-top: 300px;
    }
}
.AboutWebsite_Text_Title {
    padding-bottom: 50px;
    font-size: 40px;
    font-family: var(--gill_sans-font);
}
.AboutWebsite-Text{
    padding: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--contrast-color);
    font-family: var(--poppins-font);
}
/*Estilos referentes ao Como funciona(How-it-Works)*/
.How-it-Works{
    margin-top: 150px;
    padding: 10px;
    display: flex;
    align-items: center;
    @media screen and (max-width: 1000px) {
        flex-direction: column;
     }
}

.How-it-Works-Text-Title {
    padding-bottom: 50px;
    font-size: 40px;
    font-family: var(--gill_sans-font);
}

.How-it-Works-Text{
    padding: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--contrast-color);
    font-family: var(--poppins-font);
}
/*Estilos referentes aos Objetivos(Objectives)*/
.Objectives{
    margin-top: 150px;
    padding: 10px;
    display: flex;
    align-items: center;
    @media screen and (max-width: 1000px) {
        flex-direction: column;
     }
}
.Objectives-Text-Title {
    padding-bottom: 50px;
    font-size: 40px;
    font-family: var(--gill_sans-font);
}

.Objectives-Text{
    padding: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--contrast-color);
    font-family: var(--poppins-font);
}

